app/src/assets/css/base.scss
@import "~bulma";

// Set your brand colors
$dark-green: #1B7340;
$medium-green: #1DA64A;
$light-green: #E1F2E7;
$white-green: #F4F9F6;
$black: #000000;
$light-blue: #90D3ED;
$gray: #565656;
$light-gray: #EFEFEF;
$light-beige: #FFFFFF;

// Update Bulma's global variables
$family-sans-serif: Merriweather Sans, Lato, Cantarell, sans-serif;
$grey-dark: $black;
$grey-light: $light-gray;
$primary: $dark-green;
$link: $light-blue;

$widescreen-enabled: false;
$fullhd-enabled: false;

$family-primary: Merriweather Sans, Lato, Cantarell, sans-serif;

// Update some of Bulma's component variables
$body-background-color: $light-beige;
$control-border-width: 2px;
$input-border-color: transparent;
$input-shadow: none;

// Import only what you need from Bulma
@import "../../node_modules/bulma/sass/utilities/_all.sass";
@import "../../node_modules/bulma/sass/base/_all.sass";
@import "../../node_modules/bulma/sass/elements/button.sass";
@import "../../node_modules/bulma/sass/elements/container.sass";
@import "../../node_modules/bulma/sass/elements/form.sass";
@import "../../node_modules/bulma/sass/elements/title.sass";
@import "../../node_modules/bulma/sass/components/navbar.sass";
@import "../../node_modules/bulma/sass/layout/hero.sass";
@import "../../node_modules/bulma/sass/layout/section.sass";

.bg-light-green {
  background-color: $light-green;
}

.bg-white-green {
  background-color: $white-green;
}

.bg-dark-green {
  background-color: $dark-green;
}

.bg-medium-green {
  background-color: $medium-green;
}

.bg-light-gray {
  background-color: $light-gray;
}


.bg-light-beige {
  background-color: $light-beige;
}

.bg-light-blue {
  background-color: $light-blue;
}

.bg-light-blue {
  background-color: $light-blue;
}

.font-light {
  color: $light-gray !important;
}

:root {
  font-family: Merriweather Sans, Lato, Cantarell, sans-serif;
  font-size: 14px;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

body {
  min-height: 100vh;
  margin: 0;
}


p {
  margin: 20px;
}

h1, h2, h3 {
  font-family: "Jost Semi", Lato, Cantarell, sans-serif;
  text-transform: uppercase;
}

h1 {
  font-size: 26px;
  text-align: center;
  margin: 40px 20px 20px 20px;
}

h2 {
  font-size: 20px;
  text-align: center;
  margin: 30px 20px 20px 20px;
}

h3 {
  font-size: 18px;
  text-align: center;
  margin: 30px 20px 20px 20px;
}

.button-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

button,
.button {
  height: 40px;
  font-size: inherit;
  font-family: inherit;
  padding: 0 16px;
  color: #000000;
  border: 0;
  border-radius: 5px;
  margin: 10px;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
}

button:hover,
.button:hover {
  color: $light-beige;
}

a {
  text-decoration: none;
  color: $medium-green;
}

a:hover {
  color: $light-blue;
}

img {
  max-width: calc(100% - 40px);
  border-radius: 5px;
  margin: 20px;
  display: flex;
}

iframe {
  width: 100%;
  height: 100%;
  border: 0;
}


.transparent {
  background-color: transparent;
  border-radius: 0;
}


header {
  width: 100%;
  height: 60px;
  font-size: 16px;
  color: $light-beige;
  box-shadow: 0 -15px 10px 10px black;
  z-index: 6;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  position: sticky;
  top: 0;
}

footer {
  width: 100%;
  height: 260px;
  font-size: 16px;
  color: $light-beige;
  z-index: 6;
  display: flex;
  flex-direction: row;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  position: sticky;
  bottom: 0;
}

#header-logo-space {
  color: $light-beige;
  padding: 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#header-logo {
  width: 40px;
  height: 40px;
  background-image: url(developers-for-future-logo.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 50%;
  cursor: pointer;
  display: flex;
}

#header-logo-title {
  margin-left: 16px;
}

nav {
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

nav ul {
  height: 100%;
  padding: 0 6px 0 0;
  margin: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  list-style: none;
}

nav ul li {
  height: 100%;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

nav ul li a {
  height: 100%;
  color: $light-beige;
  padding: 0 16px 0 16px;
  margin: 0;
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
}

nav ul li a::after {
  content: "";
  width: calc(100% - 32px);
  height: 0;
  background-color: transparent;
  position: absolute;
  bottom: 0;
  border-radius: 1px 1px 0 0;
  transition-property: height, background-color;
  transition-duration: 0.2s;
  transition-timing-function: ease;
}

nav ul li a:hover {
  color: $light-beige;
}

nav ul li:hover a::after {
  height: 4px;
  background-color: $dark-green;
}

nav ul li.active a::after {
  height: 4px;
  background-color: $light-beige;
}

.view-source-button {
  color: $light-beige;
  background-color: transparent;
  border: 2px solid $light-beige;
}

.view-source-button:hover {
  color: #000000;
  background-color: $light-blue;
  border: 2px solid transparent;
}


main {
  height: height;
  padding: 0 10px 60px 10px;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
  box-sizing: border-box;
}

content {
  width: calc(100% - 320px);
  max-width: 1200px;
  padding: 10px;
  border-radius: 5px;
  flex-shrink: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  box-sizing: border-box;
}
/* ... */

